force-app/main/default/objects/p2s_base1__GlobalSetting__c/p2s_base1__GlobalSetting__c.object-meta.xml
<CustomObject>
    <label>Global Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>