force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__ActivateAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivateAccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to turn on the Account trigger</description>
    <inlineHelpText>Check this box to turn on the Account trigger</inlineHelpText>
    <label>Activate Account Tracking</label>
    <type>Checkbox</type>
</CustomField>