force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__ActivateCampaignMemberTrigger__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivateCampaignMemberTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to turn on the CampaignMember trigger</description>
    <inlineHelpText>Check this box to turn on the CampaignMember trigger</inlineHelpText>
    <label>Activate CampaignMember Trigger</label>
    <type>Checkbox</type>
</CustomField>