force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__ActivateCustomerPathTrigger__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivateCustomerPathTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to turn on the CustomerPath__c trigger</description>
    <inlineHelpText>Check this box to turn on the CustomerPath__c trigger</inlineHelpText>
    <label>Activate CustomerPath__c Trigger</label>
    <type>Checkbox</type>
</CustomField>