force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__ActivateDashPlatformEventTrigger__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivateDashPlatformEventTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate DashPlatformEvent__e Trigger</label>
    <type>Checkbox</type>
</CustomField>