force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__ActivateLeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivateLeadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to turn on the Lead trigger</description>
    <inlineHelpText>Check this box to turn on the Lead trigger</inlineHelpText>
    <label>Activate Lead Tracking</label>
    <type>Checkbox</type>
</CustomField>