force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__AllowTriggerExceptions__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AllowTriggerExceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, triggers will throw exceptions.  This keeps the system data integrity but mis-configuration of Dash may cause transactions to be blocked</description>
    <inlineHelpText>If this field is checked, triggers will throw exceptions.  This keeps the system data integrity but mis-configuration of Dash may cause transactions to be blocked</inlineHelpText>
    <label>Allow Trigger Exceptions</label>
    <type>Checkbox</type>
</CustomField>