force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__CompressLogs__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__CompressLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, one Log__c record will be written for each execution context, rather than one record per log stagement.</description>
    <inlineHelpText>If this field is checked, one Log__c record will be written for each execution context, rather than one record per log stagement.</inlineHelpText>
    <label>Compress Logs</label>
    <type>Checkbox</type>
</CustomField>