force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__DebugLevel__c</fullName>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>