force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__DiagnosticMode__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__DiagnosticMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is checked, the log file will not automatically be purged</description>
    <inlineHelpText>If this setting is checked, the log file will not automatically be purged</inlineHelpText>
    <label>Diagnostic Mode (Keep Logs)</label>
    <type>Checkbox</type>
</CustomField>