force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIAccessToken__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIAccessToken__c</fullName>
    <label>Engagio API Access Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>