force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIAccountList__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIAccountList__c</fullName>
    <description>Enter the ID of the Engagio Account List that will be used in the Engagio API web service calls</description>
    <inlineHelpText>Enter the ID of the Engagio Account List that will be used in the Engagio API web service calls</inlineHelpText>
    <label>Engagio API Account List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>