force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIAdditionalQueryString__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIAdditionalQueryString__c</fullName>
    <description>If this field is populated, it will be appended to the Engagio API calls.  This can be used to set global query filters or other advanced operations.</description>
    <inlineHelpText>If this field is populated, it will be appended to the Engagio API calls.  This can be used to set global query filters or other advanced operations.</inlineHelpText>
    <label>Engagio API Additional Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>