force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIEnvironment__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIEnvironment__c</fullName>
    <label>Engagio API Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>