force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIFetchDays__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIFetchDays__c</fullName>
    <defaultValue>7</defaultValue>
    <description>The number of days that will be queried at a time while calling the Engagio API.  For example, setting this value to 1 will bring only 1 day at a time while setting to 365 will attempt to bring back one year.</description>
    <inlineHelpText>The number of days that will be queried at a time while calling the Engagio API.  For example, setting this value to 1 will bring only 1 day at a time while setting to 365 will attempt to bring back one year.</inlineHelpText>
    <label>Engagio API Fetch Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>