force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPITestAccount__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPITestAccount__c</fullName>
    <description>Enter the Salesforce Account ID that all activities should be linked to.  This is used for testing and should be left blank during production.</description>
    <inlineHelpText>Enter the Salesforce Account ID that all activities should be linked to.  This is used for testing and should be left blank during production.</inlineHelpText>
    <label>Engagio API Test Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>