force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__EngagioAPIToDateBuffer__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioAPIToDateBuffer__c</fullName>
    <defaultValue>3</defaultValue>
    <description>This field will set the number of days to be subtracted from todays date when querying the Engagio API.  This is used to set the upper limit of activities that can be queried.  (1 = query through yesterday)</description>
    <inlineHelpText>This field will set the number of days to be subtracted from todays date when querying the Engagio API.  This is used to set the upper limit of activities that can be queried.  (1 = query through yesterday)</inlineHelpText>
    <label>Engagio API To Date Buffer</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>