force-app/main/default/objects/p2s_base1__GlobalSetting__c/fields/p2s_base1__TransactionDateOverride__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__TransactionDateOverride__c</fullName>
    <description>This field will be used instead of the System Date.  This is useful for data conversions or simulated transactions.</description>
    <inlineHelpText>This field will be used instead of the System Date.  This is useful for data conversions or simulated transactions.</inlineHelpText>
    <label>(System Use Only) Trans Date Override</label>
    <type>Date</type>
</CustomField>