force-app/main/default/objects/p2s_base1__GlobalSetting__c/listViews/p2s_base1__All.listView-meta.xml
<ListView>
    <fullName>p2s_base1__All</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__Active__c</columns>
    <columns>p2s_base1__ActivateAccountTrigger__c</columns>
    <columns>p2s_base1__ActivateContactTrigger__c</columns>
    <columns>p2s_base1__ActivateLeadTrigger__c</columns>
    <columns>p2s_base1__ActivateOpportunityTrigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>